* Added padding-inline and text-align on .hero__text * Added styles for when open button has aria-expanded="true" * Added closeMenuBtn selector in JS, fixed toggle function

--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -27,7 +27,7 @@
 
 .primary-nav__list {
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     align-items: center;
     gap: var(--space-200);
 
@@ -85,4 +85,16 @@
 
 .close-btn {
    display: none;
+}
+
+
+body:has(.open-btn[aria-expanded="true"]) {
+    
+    .open-btn {
+            display: none;
+    }
+
+    .close-btn {
+        display: block;
+     }
 }
